--- a/css/AudioPlayer.css
+++ b/css/AudioPlayer.css
@@ -435,6 +435,7 @@
     top: 50%;
     left: 50%;
     font-size: 2rem;
+    line-height: 2rem;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     letter-spacing: 2px;
