--- a/docs/css/sg-main.css
+++ b/docs/css/sg-main.css
@@ -62,6 +62,7 @@ h6 {
     border: 1px solid #ddd;
     display: block;
     margin: 0px auto 40px auto;
+    text-align: center;
 }
 
 .mdl-button input {
