--- a/docs/css/AudioPlayer.css
+++ b/docs/css/AudioPlayer.css
@@ -140,14 +140,14 @@
 .progress__bar:after {
     position: absolute;
     top: 0;
-    right: -10px;
-    width: 10px;
-    height: 10px;
-    margin-top: -3px;
+    right: -3px;
+    width: 4px;
+    height: 7px;
+    margin-top: 0px;
     content: '';
-    border-radius: 6px;
+    border-radius: 0;
     background: #2196F3;
-    opacity: 0;
+    opacity: 1;
     transition: opacity .3s ease;
 }
 
