--- a/docs/css/sg-main.css
+++ b/docs/css/sg-main.css
@@ -1,7 +1,7 @@
 /**** Songet styles **/
 
 body * {
-    font-family: "Helvetica Neue", sans-serif;
+    font-family: 'Titillium Web', sans-serif;
     font-size: 12px;
     line-height: 14px;
     letter-spacing: 0.5px;
@@ -128,6 +128,7 @@ h6 {
 
 .mdl-list__item .mdl-list__item-primary-content {
     min-width: 155px;
+    font-size: 15px;
 }
 
 .mdl-list__item:hover .material-icons.mdl-list__item-avatar,
