--- a/docs/css/sg-main.css
+++ b/docs/css/sg-main.css
@@ -2,8 +2,8 @@
 
 body * {
     font-family: 'Titillium Web', sans-serif;
-    font-size: 12px;
-    line-height: 14px;
+    font-size: 15px;
+    line-height: 16px;
     letter-spacing: 0.5px;
 }
 
@@ -104,7 +104,7 @@ h6 {
 }
 
 .box-normal .mdl-list__item {
-    padding: 10px 0px;
+    padding: 0;
     transition: all 0.5s ease-in-out;
 }
 
