--- a/docs/css/AudioPlayer.css
+++ b/docs/css/AudioPlayer.css
@@ -92,6 +92,9 @@
     text-align: left;
     white-space: nowrap;
     text-overflow: ellipsis;
+    font-weight: bold;
+    color: #2196F3;
+    font-size: 13px;
 }
 
 .track__time {
